# EasyZMQ-Cpp

./: CMakeLists.txt  README.md  context.cpp  context.h  socket.cpp  socket.h  zmqcpp.h
messages/: _base_msg.h  _base_msg.hpp  message.h
tests/: CMakeLists.txt  helpers.cpp  message.cpp  socket.cpp
